# project_agent_tutor

./: .env.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml  기술_명세서_AI_Agent_Tutor_v1_9.docx
fastapi/: Dockerfile  pyproject.toml  requirements.txt
fastapi/ai_agent_tutor_fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fastapi/app/: main.py
fastapi/app/core/: config.py  security.py
fastapi/app/routers/: internal_sessions.py  internal_skills.py
fastapi/app/schemas/: session.py
fastapi/app/services/: graph_nodes.py  llm_client.py  search_context.py  session_llm.py  skill_manager.py  tavily_client.py  tutor_graph.py
fastapi/app/services/skillopt/: gate.py  pipeline.py  reflect_edit.py  rollout.py
fastapi/tests/: test_pipeline_gate.py  test_skill_validation.py
nginx/: nginx.conf  nginx.dev.conf  nginx.prod.conf
springboot/: Dockerfile  build.gradle  settings.gradle
springboot/src/main/java/com/aitutor/: AgentTutorApplication.java
springboot/src/main/java/com/aitutor/client/: AIAgentClient.java
springboot/src/main/java/com/aitutor/common/: ApiResponse.java
springboot/src/main/java/com/aitutor/config/: AsyncConfig.java  SwaggerConfig.java
springboot/src/main/java/com/aitutor/controller/: AuthController.java  SessionController.java  SkillController.java  SubjectController.java  UserController.java
springboot/src/main/java/com/aitutor/domain/: LearningSession.java  Level.java  Provider.java  RefreshToken.java  Role.java  (+8 more)
springboot/src/main/resources/: application-dev.yml  application.yml  data.sql  schema.sql
(+54 files in other folders)
